--- a/queries.css
+++ b/queries.css
@@ -1,73 +1,129 @@
 /* Big tablet to 1200px */
 @media only screen and (max-width: 1200px) {
-    .btn-secondary  {
-        width: 25%;
-    }
+  .btn-secondary {
+    width: 25%;
+  }
 }
 /* smal tablet to big tablet */
 @media only screen and (max-width: 768px) {
-    .hero h1 {
-        font-size: 200%;
-    }
+  .hero h1 {
+    font-size: 200%;
+  }
 
-    .hero p {
-        width: 50%;
-    }
+  .hero p {
+    width: 50%;
+  }
 
-    .hero img {
-        width: 80%;
-    }
+  .hero img {
+    width: 80%;
+  }
 
-    .btn-secondary  {
-        width: 45%;
-    }
+  .btn-secondary {
+    width: 45%;
+  }
 
-    .user {
-        flex-direction: column;
-    }
+  .user {
+    flex-direction: column;
+    width: 100%;
+  }
 
-    .user .content h1 ,p{
-        width: 100%;
-        text-align: center;
-    }
+  .user .content {
+    width: 100%;
+  }
 
-    .user .content:nth-of-type(1) p,
-    .user .content:nth-of-type(3) p{
-        margin-bottom: 2rem;
-    }
+  .user .illustration {
+    width: 100%;
+  }
 
-    .user .content:nth-of-type(2) h1 {
-        margin-top: 2rem;
-    }
-
-    .footer .about-us p {
-        text-align: left;
-    }
-
-    .footer .news-letter .submit {
-        margin: 0 auto;
-    }
-}
-    
-
-
-
-/* Small Phones to small tablets: from 481px to 767px
-@media only screen and (max-width: 767px) {
-} */
-
-/* Small Phones: from 375 to 480px */
-@media only screen and (max-width: 480px) {
-}
-.user {
-    justify-content: center;
-}
-.user .illustration img {
-    width: 300px;
+  .user .content h1,
+  p {
+    width: 100%;
     margin: 0 auto;
     text-align: center;
   }
 
+  .user .content:nth-of-type(1) p,
+  .user .content:nth-of-type(3) p {
+    margin-bottom: 2rem;
+  }
+
+  .user .content:nth-of-type(2) h1 {
+    margin-top: 2rem;
+  }
+
+  .footer {
+    flex-direction: column;
+  }
+
+  .footer .about-us p {
+    text-align: left;
+  }
+
+  .footer .news-letter .submit {
+    margin: 0 auto;
+  }
+
+  .footer .about-us,
+  .footer .news-letter {
+    width: 100%;
+  }
+
+  .footer .about-us p {
+    width: 60%;
+    text-align: center;
+  }
+  .footer .about-us p:nth-of-type(3) {
+    margin-bottom: 2rem;
+  }
+
+  .footer .news-letter h2,
+  p {
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .footer .news-letter h2 {
+    margin-bottom: 1.2rem;
+  }
+
+  .footer .news-letter .submit {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer .news-letter .submit input[type="text"] {
+    margin-left: rem;
+    margin-bottom: 1rem;
+    padding: 0.5rem 8rem;
+  }
+}
+/* Small Phones: from 375 to 480px */
+@media only screen and (max-width: 480px) {
+  header img {
+    flex: 1;
+    /* width: 60%; */
+  }
+
+  header .btn-primary {
+    display: none;
+  }
+
+  .hero h1 {
+    font-size: 150%;
+    width: 60%;
+    margin: 0 auto;
+  }
+
+  .btn-secondary {
+    width: 56%;
+  }
+
+  .get-started h1 {
+    font-size: 150%;
+    width: 60%;
+    margin: 0 auto;
+  }
+}
 /* Super Small phones : from 0 to 374 */
-@media only screen and (max-width: 374) {
+@media only screen and (max-width: 374px) {
 }
