--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
   box-sizing: border-box;
 }
 
+* > img {
+  margin: 0; 
+  padding: 0;
+}
+
 /* Utility */
 
 .btn-primary {
@@ -50,7 +55,6 @@
   border: 1px solid hsl(322, 100%, 66%);
   background: hsl(193, 100%, 96%);
   color: hsl(322, 100%, 66%);
-  transform: scale(1.2);
   transition: all 0.3s ease-in-out;
 }
 
@@ -69,7 +73,8 @@ body {
 }
 
 .container {
-  padding: 4rem 3.5rem;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .home {
@@ -79,6 +84,7 @@ body {
 /* header */
 
 header {
+  padding: 4rem 3.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -87,14 +93,6 @@ header {
 
 header img {
   width: 200px;
-}
-
-header .btn {
-  text-decoration: none;
-  border: 1.2px solid;
-  border-radius: 25px;
-  color: hsl(322, 100%, 66%);
-  padding: 0.3rem 1.5rem;
 }
 
 /* Hero  */
@@ -125,14 +123,12 @@ header .btn {
 /* users */
 
 .users {
+  width: 100%;
   flex-direction: column;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .user {
-  padding: 0 5rem;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -140,12 +136,11 @@ header .btn {
 }
 
 .user .content {
-  width: 50%;
   display: flex;
   text-align: left;
   flex-direction: column;
-  justify-content: center;
-  justify-items: center;
+  justify-content: center; 
+  width: 50%;
 }
 
 .user .content h1,
@@ -156,13 +151,15 @@ p {
 
 .user .illustration {
   width: 50%;
-  text-align: center;
   justify-content: center;
-  justify-items: center;
+  display: flex;
 }
 
 .user .illustration img {
+  overflow: hidden;
   width: 400px;
+  height: auto;
+  
 }
 
 /* Get Started */
@@ -257,7 +254,6 @@ footer .news-letter .submit input[type="submit"] {
 *::before,
 *::after {
   box-sizing: border-box;
-
 }
 
 .wave-container > svg {
