--- a/style.css
+++ b/style.css
@@ -119,6 +119,33 @@ header img {
   margin: 0 auto;
   width: 55%;
 }
+/* Analaystics */
+
+.analystics {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.card {
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+}
+
+.card p{
+  text-align: center;
+  font-size: 120%;
+  color:hsl(208, 11%, 55%)
+}
+
+.card p span {
+  font-size: 400%;
+  color: hsl(192, 100%, 9%);
+  font-weight: 600;
+}
+
 
 /* users */
 
@@ -181,11 +208,9 @@ p {
   padding: 0 1rem;
   display: flex;
   justify-content: center;
-  align-items: center;
   background-color: hsl(192, 100%, 9%);
   color: hsl(193, 100%, 96%);
   padding-bottom: 4rem;
-  overflow: hidden;
 }
 
 .footer .about-us {
@@ -205,18 +230,42 @@ p {
 footer .about-us p {
   line-height: 1.5;
   width: 40%;
-  /* margin: 0 auto; */
 }
 
 footer .about-us p:nth-of-type(2) {
   line-height: 4;
 }
 
+footer .about-us .social {
+  width: 40%;
+  align-self: center;
+}
+
+footer .about-us .social i {
+  font-size: 25px;
+  padding-right: 1rem;
+  margin-top:3rem ;
+}
+
+footer .about-us .social i:nth-of-type(1):hover {
+  color: #4267B2;
+}
+footer .about-us .social i:nth-of-type(2):hover {
+  color: #DB4437;
+}
+footer .about-us .social i:nth-of-type(3):hover {
+  color: #1DA1F2;
+}
+
+footer .about-us .social i:hover {
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
 .footer .news-letter {
   width: 50%;
   display: flex;
   flex-direction: column;
-  margin-bottom: 3.3rem;
 }
 
 .footer .news-letter h2 {
@@ -248,6 +297,25 @@ footer .news-letter .submit input[type="submit"] {
   background-color: hsl(322, 100%, 66%);
   color: hsl(193, 100%, 96%);
   font-weight: 600;
+}
+
+.coded-by {
+  text-align: center;
+  background-color: hsl(192, 100%, 9%);
+  color: hsl(193, 100%, 96%);
+  padding: 1.5rem 0;
+  width: 100%;
+}
+
+.coded-by p a {
+  text-decoration: none;
+  color: hsl(322, 100%, 66%);
+}
+.coded-by a:hover {
+  background: hsla(209, 11%, 55%, 0.425);
+  padding: .3rem .5rem ;
+  border-radius: 25px;
+  transition: .3s ease-in-out;
 }
 
 *,
